--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gocv"]
 	path = gocv
 	url = git@github.com:hybridgroup/gocv.git
+[submodule "smkdev-aether"]
+	path = smkdev-aether
+	url = git@github.com:smkdev-id/smkdev-aether.git
